@@ -1,3 +1,12 @@
+2014-03-02 German Arias <germanandre@gmx.es>
+
+	* PCAppController.m: For Windows add a menu with all types of projects.
+	So the user can select directly the type of project he want.
+	* Headers/ProjectCenter/PCProjectManager.h:
+	* Framework/PCProjectManager.m: Add the neccesary changes to use the
+	selected type of project at main menu (on Windows).
+	* PCMenuController.m: Use the new method to make a new project.
+
 2014-01-17 German Arias <germanandre@gmx.es>
 
 	* English.lproj/ProjectCenter.gorm: Connect option "Line Number..."
